--- a/src/components/css/Card.css
+++ b/src/components/css/Card.css
@@ -64,13 +64,14 @@
     display: flex;
     flex-direction: column;
     font-family: "Trebuchet MS", serif !important;
-    font-size: 1vw;
+    font-size: 1.2vw;
     padding-left: 20px;
     padding-top: 10px;
     margin: auto;
     text-align: left;
     /* color: white; */
     color: white;
+    margin-top: 5px;
 }
 
 .right-title-text {
@@ -107,7 +108,7 @@
 .headers {
     margin: 0px;
     padding-top: 10px;
-    font-size: 1.1vw;
+    font-size: 1.5vw;
 
 }
 
