--- a/src/components/css/Navbar.css
+++ b/src/components/css/Navbar.css
@@ -9,7 +9,7 @@ h1, h2, p, ul, li {
 ul.header li {
   display: inline;
   list-style-type: none;
-  margin: 0;
+  margin: 0px;
   width:20%;
 }
 ul.header {
@@ -22,7 +22,6 @@ ul.header li a {
   color: white;
   font-weight: bold;
   text-decoration: none;
-  padding: 20px;
   display: inline-block;
   float: right;
   cursor: pointer;
@@ -39,6 +38,7 @@ ul.header li a {
 
 .link {
     color: white;
+    font-size: 1vw;
 }
 
 .content {
