--- a/src/components/css/Navbar.css
+++ b/src/components/css/Navbar.css
@@ -22,6 +22,7 @@ ul.header li a {
   color: white;
   font-weight: bold;
   text-decoration: none;
+  padding: 5px;
   display: inline-block;
   float: right;
   cursor: pointer;
