--- a/src/components/css/Card.css
+++ b/src/components/css/Card.css
@@ -46,7 +46,7 @@
     margin-right: auto;
     margin-top: auto;
     margin-bottom: auto;
-    width: 97%;
+    width: 100%;
     border-radius: 20px;
     /* box-shadow: 10px 10px 5px grey; */
 }
@@ -64,9 +64,9 @@
     display: flex;
     flex-direction: column;
     font-family: "Trebuchet MS", serif !important;
-    font-size: 1.2vw;
+    font-size: 1em;
     padding-left: 20px;
-    padding-top: 10px;
+    /* padding-top: 10px; */
     margin: auto;
     text-align: left;
     /* color: white; */
@@ -76,7 +76,7 @@
 }
 
 .right-title-text {
-    font-size: 1vw;
+    font-size: 1em;
     height: 10%;
     /* background-color: blue; */
     color: #197ac4;
@@ -108,8 +108,21 @@
 
 .headers {
     margin: 0px;
-    padding-top: 10px;
-    font-size: 1.5vw;
+    /* padding-top: 10px; */
+    font-size: 1.1em;
+    color: #4286f4;
+    text-align:  left;
+    padding-left: 20px;
+}
+
+.headers2 {
+    margin: 0px;
+    /* padding-top: 10px; */
+    font-size: 1.1em;
+    color: #197ac4;
+    text-align:  left;
+    padding-left: 20px;
+    font-style: italic;
 
 }
 
