--- a/src/components/css/Card.css
+++ b/src/components/css/Card.css
@@ -1,6 +1,6 @@
 .cards {
     /* height: 350px; */
-    width: 100%;
+    width: 90%;
     background: transparent;
     /* display: block; */
     border-radius: 20px;
@@ -33,7 +33,7 @@
 .left-half {
   /* background-color: #ff9e2c; */
   left: 0px;
-  width: 40%;
+  width: 50%;
   display: flex;
   flex-direction: column;
   border-top-left-radius: inherit;
@@ -54,7 +54,7 @@
 .right-half {
   /* background-color: #b6701e; */
   right: 0px;
-  width: 60%;
+  width: 50%;
   height: inherit;
   border-top-right-radius: inherit;
   border-bottom-right-radius: inherit;
@@ -64,7 +64,7 @@
     display: flex;
     flex-direction: column;
     font-family: "Trebuchet MS", serif !important;
-    font-size: 1em;
+    font-size: 1vw;
     padding-left: 20px;
     /* padding-top: 10px; */
     margin: auto;
