--- a/src/components/css/Card.css
+++ b/src/components/css/Card.css
@@ -33,7 +33,7 @@
 .left-half {
   /* background-color: #ff9e2c; */
   left: 0px;
-  width: 50%;
+  width: 40%;
   display: flex;
   flex-direction: column;
   border-top-left-radius: inherit;
@@ -46,15 +46,17 @@
     margin-right: auto;
     margin-top: auto;
     margin-bottom: auto;
-    width: 100%;
+    width: 90%;
     border-radius: 20px;
+    /* padding-right: 10px; */
     /* box-shadow: 10px 10px 5px grey; */
 }
 
 .right-half {
   /* background-color: #b6701e; */
   right: 0px;
-  width: 50%;
+  width: 60%;
+  /* padding-left: 10px; */
   height: inherit;
   border-top-right-radius: inherit;
   border-bottom-right-radius: inherit;
