--- a/src/components/css/Card.css
+++ b/src/components/css/Card.css
@@ -20,6 +20,7 @@
     display: flex;
     margin: auto;
     color: #00bfff;
+    font-family: "Trebuchet MS", serif !important;
 }
 
 .cardWrapper {
