--- a/src/components/css/Section.css
+++ b/src/components/css/Section.css
@@ -55,6 +55,7 @@ h2 {
     justify-content: center;
     align-items: center;
     text-align: center;
+    font-family: "Trebuchet MS", serif !important;
     font-size: 2.5em;
     color: white;
 }
