--- a/src/components/css/profiletext.css
+++ b/src/components/css/profiletext.css
@@ -8,3 +8,7 @@ p {
     font-family: "Trebuchet MS", serif !important;
     font-size: 1vw;
 }
+
+h4 {
+    font-family: "Trebuchet MS", serif !important;
+}
