Franklin Gothic Medium font

--- a/src/components/css/profiletext.css
+++ b/src/components/css/profiletext.css
@@ -5,10 +5,10 @@
 }
 
 p {
-    font-family: "Trebuchet MS", serif !important;
+    font-family: "Franklin Gothic medium", sans-serif !important;
     font-size: 1vw;
 }
 
 h4 {
-    font-family: "Trebuchet MS", serif !important;
+    font-family: "Franklin Gothic medium", sans-serif !important;
 }
