--- a/src/components/css/Button.css
+++ b/src/components/css/Button.css
@@ -14,7 +14,7 @@
 
 a {
     padding: 5px;
-    font-family: "Trebuchet MS", serif !important;
+    font-family: "Franklin Gothic medium", sans-serif !important;
 }
 
 a:hover {
