--- a/src/components/css/Card.css
+++ b/src/components/css/Card.css
@@ -15,14 +15,6 @@
     padding: 0px;
 }
 
-
-.links {
-    display: flex;
-    margin: auto;
-    color: #00bfff;
-    font-family: "Trebuchet MS", serif !important;
-}
-
 .cardWrapper {
     display: flex;
     flex-direction: row;
@@ -66,7 +58,7 @@
 .right-text {
     display: flex;
     flex-direction: column;
-    font-family: "Trebuchet MS", serif !important;
+    font-family: "Franklin Gothic medium", sans-serif !important;
     font-size: 1vw;
     padding-left: 20px;
     /* padding-top: 10px; */
@@ -120,10 +112,18 @@
 }
 
 
+.links {
+    display: flex;
+    margin: auto;
+    color: #00bfff;
+    font-family: "Franklin Gothic medium", sans-serif !important;
+    font-size: 1.1em;
+}
+
 
 .headers {
-    font-family: "Trebuchet MS", serif !important;
-    font-size: 1.1em;
+    font-family: "Franklin Gothic medium", sans-serif !important;
+    font-size: 1.2em;
     color: #4286f4;
     text-align: left;
     display: flex;
@@ -134,7 +134,7 @@
 .headers2 {
     margin: 0px;
     /* padding-top: 10px; */
-    font-size: 1.1em;
+    font-size: 1.2em;
     color: #197ac4;
     text-align:  left;
     padding-left: 20px;
