--- a/src/components/css/Contact.css
+++ b/src/components/css/Contact.css
@@ -46,5 +46,5 @@ input[type=submit] {
 }
 
 h5 {
-    font-family: "Trebuchet MS", serif !important;
+    font-family: "Franklin Gothic medium", sans-serif !important;
 }
