--- a/src/components/css/Navbar.css
+++ b/src/components/css/Navbar.css
@@ -4,7 +4,7 @@ body {
   margin: 0;
 }
 h1, h2, p, ul, li {
-  font-family: "Trebuchet MS", serif !important;
+    font-family: "Franklin Gothic medium", sans-serif !important;
 }
 ul.header li {
   display: inline;
