--- a/src/components/css/skills.css
+++ b/src/components/css/skills.css
@@ -12,7 +12,7 @@
     display: inline-block;
     margin: 8px;
     padding: 8px;
-    font-family: "Trebuchet MS", serif !important;
+    font-family: "Franklin Gothic medium", sans-serif !important;
     font-size: 1.2vw;
     color: #00bfff;
 }
@@ -21,6 +21,6 @@
     padding: 10px;
     font-size: 1.1vw;
     color: #00bfff;
-    font-family: "Trebuchet MS", serif !important;
+    font-family: "Franklin Gothic medium", sans-serif !important;
     width: 120px;
 }
