--- a/src/components/css/profiletext.css
+++ b/src/components/css/profiletext.css
@@ -4,11 +4,43 @@
     width: 70%;
 }
 
+.profilewrapper {
+    display: flex;
+    flex-direction: row;
+    height: inherit;
+    border-radius: inherit;
+}
+
+.portrait {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: auto;
+  margin-bottom: auto;
+  width: 100%;
+  border-radius: 20px;
+}
+
+.textsection {
+  display: flex;
+  padding: 5px;
+  flex-direction: column;
+  width: 50%;
+}
+
 p {
     font-family: "Franklin Gothic medium", sans-serif !important;
     font-size: 1vw;
+    text-align: left;
+    /* padding: 10px; */
 }
 
 h4 {
     font-family: "Franklin Gothic medium", sans-serif !important;
+    /* padding: 0px; */
+}
+
+td {
+  width: 50%;
+  padding: 15px;
 }
