--- a/src/components/css/Section.css
+++ b/src/components/css/Section.css
@@ -1,11 +1,9 @@
 .section {
     display: block;
-    width: 75%;
-    margin-left: auto;
-    margin-right: auto;
     /* background-color: yellow; */
     /* border-bottom: 1px solid #197ac4; */
-    padding: 25px;
+    padding-bottom: 25px;
+    padding-top: 25px;
     position: static;
     left: 0;
     right: 0;
