--- a/src/components/css/Card.css
+++ b/src/components/css/Card.css
@@ -143,6 +143,13 @@
 }
 
 
+@media screen and (max-width: 1024px) {
+    h2 {
+        text-size: 20px;
+    }
+}
+
+
 
 .imageDiv {
     margin-top: auto;
