--- a/src/components/css/Section.css
+++ b/src/components/css/Section.css
@@ -72,7 +72,16 @@ h2:after {
 
 .color {
     background-color: transparent;
+    font-size: 180%;
+    margin-bottom: 20px;
 }
+
+@media screen and (max-width: 1024px) {
+    .color {
+        font-size: 120%;
+    }
+}
+
 
 .here:after {
     content:"";
