--- a/src/components/css/icon.css
+++ b/src/components/css/icon.css
@@ -12,5 +12,11 @@
     margin-left: 25px;
     color: white;
     margin: auto;
+}
 
+@media screen and (max-width: 1024px) {
+    .icon {
+        width: 50px;
+        height: 50px;
+    }
 }
