--- a/src/components/css/newCard.css
+++ b/src/components/css/newCard.css
@@ -62,6 +62,13 @@
     }
 }
 
+@media screen and (max-width: 1024px) {
+    .title, .subtitle, .description {
+        font-size: 100%;
+    }
+}
+
+
 
 
 @media all and (max-width: @breakpoint) {
