--- a/src/components/css/profile.css
+++ b/src/components/css/profile.css
@@ -1,7 +1,6 @@
 
 #profilePic {
-  width: 100%;
-  margin: auto;
+  width: 80%;
   border-radius: 7%;
   margin-bottom: 10px;
 }
@@ -29,9 +28,10 @@ p {
     /* padding: 10px; */
 }
 
-@media screen and (max-width: 1024) {
+@media screen and (max-width: 1200px) {
     .text-section {
-        text-align: center;
+        text-align: left;
+        font-size: 100%;
     }
 }
 
@@ -62,11 +62,4 @@ h4 {
   margin-bottom: auto;
   width: 100%;
   border-radius: 20px;
-}
-
-.textsection {
-  display: flex;
-  padding: 5px;
-  flex-direction: column;
-  width: 50%;
 }
