updated resume pdf, and other componenets

--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@
 
 .App-header {
   background-color: #282c34;
+  /* background-color: #d9b382; */
   min-height: 100vh;
   display: flex;
   flex-direction: column;
