--- a/src/components/css/Button.css
+++ b/src/components/css/Button.css
@@ -1,6 +1,6 @@
 .Button {
     background-color: white;
-    border: 3px solid #197ac4;
+    border: 3px solid white;
     border-radius: 50px;
     margin: auto;
     background: transparent;
@@ -13,6 +13,7 @@
 }
 
 a {
+    color: white;
     padding: 5px;
     font-family: "Franklin Gothic medium", sans-serif !important;
 }
