--- a/src/components/css/Main.css
+++ b/src/components/css/Main.css
@@ -57,6 +57,8 @@ h1:after {
     margin-left: auto;
     margin-right: auto;
     height: 100vh;
+    background-color: black;
+    opacity: 0.5;
 }
 
 @media screen and (max-width: 1024px) {
