--- a/src/components/css/newCard.css
+++ b/src/components/css/newCard.css
@@ -1,7 +1,5 @@
-
-
 .Card {
-  width: 60%;
+  width: 75%;
   margin-bottom: 5%;
 }
 
@@ -13,13 +11,20 @@
   margin-bottom: 10px;
 }
 
+.card-title-header {
+  display: flex;
+  flex-direction: row;
+  margin: 0px;
+  padding: 0px;
+}
+
 .title {
     font-family: "Franklin Gothic medium", sans-serif !important;
     font-size: 110%;
     color: #4286f4;
     text-align: left;
     display: flex;
-    margin: auto;
+    /* margin: auto; */
     padding-left: 20px;
 }
 
@@ -31,7 +36,15 @@
     text-align:  left;
     padding-left: 20px;
     font-style: italic;
+}
 
+.date {
+  margin: 0px;
+    /* padding-top: 10px; */
+    font-size: 110%;
+    color: grey;
+    text-align:  left;
+    padding-left: 20px;
 }
 
 .center {
@@ -43,7 +56,7 @@
     display: flex;
     flex-direction: column;
     font-family: "Franklin Gothic medium", sans-serif !important;
-    font-size: 110%;
+    font-size: large;
     padding-left: 20px;
     /* padding-top: 10px; */
     margin: auto;
