--- a/src/components/css/Navbar.css
+++ b/src/components/css/Navbar.css
@@ -6,6 +6,7 @@ body {
 h1, h2, p, ul, li {
     font-family: "Franklin Gothic medium", sans-serif !important;
 }
+
 ul.header li {
   display: inline;
   list-style-type: none;
@@ -18,6 +19,7 @@ ul.header {
   margin: 0;
   width: 100%;
 }
+
 ul.header li a {
   color: white;
   font-weight: bold;
@@ -61,5 +63,5 @@ ul.header li a {
 }
 
 .active {
-  background-color: #0099FF;
+  /* background-color: #0099FF; */
 }
