--- a/src/css/main.css
+++ b/src/css/main.css
@@ -81,9 +81,21 @@
 .main {
     width: 100%;
     background: #f7f3ed;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 .banner {
     background: #323639;
+}
+
+::-webkit-scrollbar-thumb {
+    background: rgba(37, 37, 37);
+}
+
+::-webkit-scrollbar {
+    width: 3px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: gray;
 }
