--- a/src/css/profile.css
+++ b/src/css/profile.css
@@ -1,7 +1,7 @@
 .bio-component-container {
     /* background: blue; */
     height: 100%;
-    width: 70%;
+    /* width: 70%; */
     margin: auto;
     display: block;
     overflow-x: hidden;
@@ -21,32 +21,23 @@
 
 .text {
     margin: auto;
-    font-size:  1.8vh;
+    font-size:  1rem;
     color: black;
     text-align: center;
     padding: 1vh;
+    width: 70%;
 }
 
 #bio-component {
-    /* margin-top: 10vh; */
-    display: grid;
+    /* display: grid; */
     height: 90%;
     width: 60%;
     grid-gap: 20px;
     margin: auto;
     margin-top: 5vh;
-    grid-template-columns: repeat(2, 1fr);
-    grid-auto-rows: minmax(1, auto);
-    
     grid-template-areas: 
-    "pc1  . "
-    "pc1  . "
-    "pc1 tb1"
-    "pc1 tb1"
-    "pc1  . " 
-    "pc1  . "
-    " .   . "
-    " .   . ";
+    "pc1",
+    "tb1";
 }
 
 @media screen and (max-width: 1024px) {
