--- a/src/css/profile.css
+++ b/src/css/profile.css
@@ -1,7 +1,7 @@
 .bio-component-container {
     /* background: blue; */
     height: 100%;
-    /* width: 70%; */
+    width: 70%;
     margin: auto;
     display: block;
     overflow-x: hidden;
